evolution-service/deployment/EKScluster/esp/deployment-blue.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: esp-blue
  namespace: es
spec:
  replicas: 1
  selector:
    matchLabels:
      app: esp
  template:
    metadata:
      labels:
        app: esp
        version: blue
        host: esp
        subset: blue
    spec:
      containers:
      - name: esp
        image: 634208487213.dkr.ecr.us-west-2.amazonaws.com/esp:3.1.7
        imagePullPolicy: Always
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "8Gi"
            cpu: "4.0"
